--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/memjs": "^1.3.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
