--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "db-utils",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/memjs": "^1.3.3"
+    "@types/lodash": "^4.17.13",
+    "@types/lodash-es": "^4.17.12",
+    "@types/memjs": "^1.3.3",
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
