--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/memjs": "^1.3.3",
-    "lodash-es": "^4.17.21"
+    "@types/memjs": "^1.3.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "memjs": "^1.3.2",
