--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/memjs": "^1.3.3"
+    "@types/memjs": "^1.3.3",
+    "playwright": "^1.50.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
