--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.13",
+    "@types/bun": "^1.2.4",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/lodash-es": "^4.17.12",
     "@types/memjs": "^1.3.3",
-    "playwright": "^1.50.0"
+    "playwright": "^1.51.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "memjs": "^1.3.2",
-    "nats": "^2.28.2"
+    "nats": "^2.29.2"
   }
 }
