--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "author": "dokuzbit",
   "license": "MIT",
-  "module": "index.ts",
   "type": "module",
-  "scripts": {
-    "test": "bun test"
+  "private": false,
+  "exports": {
+    "./client": {
+      "import": "./dist/client/index.js",
+      "types": "./dist/client/index.d.ts"
+    },
+    "./server": {
+      "import": "./dist/server/index.js",
+      "types": "./dist/server/index.d.ts"
+    }
   },
+  "scripts": {
+    "test": "bun test",
+    "build": "tsc",
+    "release": "npm version patch && bun run build && npm publish --access public",
+    "release:minor": "npm version minor && bun run build && npm publish --access public",
+    "release:major": "npm version major && bun run build && npm publish --access public",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
+  },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/bun": "^1.2.4",
     "@types/jsonwebtoken": "^9.0.9",
