--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,31 @@
 {
   "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM"],
+    // Çıkış dosyalarını belirle
+    "outDir": "dist",
+    "rootDir": ".",
+
+    // JavaScript kodlarını derlemek için
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
 
-    // Bundler mode
+    // Tür dosyalarını oluştur
+    "declaration": true,
+    "declarationDir": "dist",
+
+    // JavaScript dosyalarını da oluştur
+    "emitDeclarationOnly": false,
+
+    // Module çözümleme
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["client", "server"]
 }
