--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "license": "MIT",
   "type": "module",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dokuzbit/utils.git"
+  },
+  "homepage": "https://github.com/dokuzbit/utils",
+  "bugs": {
+    "url": "https://github.com/dokuzbit/utils/issues"
+  },
   "exports": {
     "./client": {
       "import": "./dist/client/index.js",
@@ -14,17 +22,20 @@
     "./server": {
       "import": "./dist/server/index.js",
       "types": "./dist/server/index.d.ts"
+    },
+    "./server/*": {
+      "import": "./dist/server/*.server.js",
+      "types": "./dist/server/*.server.d.ts"
+    },
+    "./client/*": {
+      "import": "./dist/client/*.js",
+      "types": "./dist/client/*.d.ts"
     }
   },
   "scripts": {
     "test": "bun test",
     "build": "tsc",
-    "release": "npm version patch && bun run build && npm publish --access public",
-    "release:minor": "npm version minor && bun run build && npm publish --access public",
-    "release:major": "npm version major && bun run build && npm publish --access public",
-    "version:patch": "npm version patch",
-    "version:minor": "npm version minor",
-    "version:major": "npm version major"
+    "release": "bun run build && bun publish --access public"
   },
   "files": [
     "dist"
