--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "author": "dokuzbit",
   "license": "MIT",
   "type": "module",
@@ -28,7 +28,8 @@
   "files": [
     "dist",
     "client",
-    "server"
+    "server",
+    "CHANGELOG.md"
   ],
   "devDependencies": {
     "@types/bun": "^1.2.4",
