--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ TABLE2="testDetail"
 NATS_URL="nats://localhost:4222"
 NATS_USER="text"
 NATS_PASS="text"
+NATS_NKEY="text"
 
 # GOOGLE AUTH
 AUTH_GOOGLE_ID = xxx.apps.googleusercontent.com
