--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "author": "dokuzbit",
   "license": "MIT",
   "type": "module",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/dokuzbit/utils.git"
+    "url": "git+https://github.com/dokuzbit/utils.git"
   },
   "homepage": "https://github.com/dokuzbit/utils",
   "bugs": {
