--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.14",
+  "version": "0.2.15",
   "author": "dokuzbit",
   "license": "MIT",
   "type": "module",
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "memjs": "^1.3.2",
-    "nats": "^2.29.2"
+    "nats": "^2.29.2",
+    "nats.ws": "^1.30.3"
   }
 }
