--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.15",
+  "version": "0.2.16",
   "author": "dokuzbit",
   "license": "MIT",
   "type": "module",
@@ -32,20 +32,21 @@
     "CHANGELOG.md"
   ],
   "devDependencies": {
-    "@types/bun": "^1.2.4",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/bun": "^1.2.23",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/memjs": "^1.3.3",
     "@types/trusted-types": "^2.0.7",
-    "playwright": "^1.51.0"
+    "playwright": "^1.55.1"
   },
   "peerDependencies": {
-    "typescript": "^5.8.2"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
+    "arktype": "^2.1.22",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.4.0",
+    "mariadb": "^3.4.5",
     "memjs": "^1.3.2",
-    "nats": "^2.29.2",
+    "nats": "^2.29.3",
     "nats.ws": "^1.30.3"
   }
 }
