--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dokuzbit/utils",
   "description": "Utility functions for web apps, both server and client.",
-  "version": "0.2.18",
+  "version": "0.2.19",
   "author": "dokuzbit",
   "license": "MIT",
   "type": "module",
@@ -15,21 +15,49 @@
     "url": "https://github.com/dokuzbit/utils/issues"
   },
   "exports": {
-    "./client": "./client/index.ts",
-    "./server": "./server/index.ts",
-    "./server/*": "./server/*.ts",
-    "./client/*": "./client/*.ts"
+    "./client": {
+      "types": "./dist/client/index.d.ts",
+      "default": "./client/index.ts"
+    },
+    "./server": {
+      "types": "./dist/server/index.d.ts",
+      "default": "./server/index.ts"
+    },
+    "./common": {
+      "types": "./dist/common/index.d.ts",
+      "default": "./common/index.ts"
+    },
+    "./client/*": {
+      "types": "./dist/client/*.d.ts",
+      "default": "./client/*.ts"
+    },
+    "./server/*": {
+      "types": "./dist/server/*.d.ts",
+      "default": "./server/*.ts"
+    },
+    "./common/*": {
+      "types": "./dist/common/*.d.ts",
+      "default": "./common/*.ts"
+    }
   },
   "scripts": {
     "test": "bun test",
     "build": "tsc",
-    "release": "bun run build && npm publish --access public"
+    "release": "bun run build && npm publish --access public",
+    "setup-ai": "node scripts/setup-ai.js"
+  },
+  "bin": {
+    "dokuzbit-setup-ai": "./scripts/setup-ai.js"
   },
   "files": [
     "dist",
     "client",
     "server",
-    "CHANGELOG.md"
+    "common",
+    "scripts",
+    "CHANGELOG.md",
+    "AI_CONTEXT.md",
+    ".cursorrules"
   ],
   "devDependencies": {
     "@types/bun": "^1.2.23",
